--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@gluestack-style/react": "^1.0.57",
+    "@gluestack-ui/config": "^1.1.20",
+    "@gluestack-ui/themed": "^1.1.73",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -28,6 +31,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
+    "lucide-react-native": "^0.563.0",
     "nativewind": "^4.0.0-alpha.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
