--- a/client/package.json
+++ b/client/package.json
@@ -16,16 +16,26 @@
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.20",
     "@gluestack-ui/themed": "^1.1.73",
+    "@react-native-aria/checkbox": "^0.2.10",
+    "@react-native-aria/dialog": "^0.0.5",
+    "@react-native-aria/focus": "^0.2.9",
+    "@react-native-aria/interactions": "^0.2.16",
+    "@react-native-aria/listbox": "^0.2.9",
+    "@react-native-aria/overlays": "^0.3.15",
+    "@react-native-aria/radio": "^0.2.13",
+    "@react-native-aria/slider": "^0.2.12",
+    "@react-native-aria/toggle": "^0.2.11",
+    "@react-native-aria/utils": "^0.2.12",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "expo": "~54.0.10",
+    "expo": "~54.0.33",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.8",
+    "expo-router": "~6.0.23",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -35,7 +45,7 @@
     "nativewind": "^4.0.0-alpha.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "^0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
