--- a/client/package.json
+++ b/client/package.json
@@ -26,9 +26,11 @@
     "@react-native-aria/slider": "^0.2.12",
     "@react-native-aria/toggle": "^0.2.11",
     "@react-native-aria/utils": "^0.2.12",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "axios": "^1.13.4",
     "expo": "~54.0.33",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
